<resources>
    <string name="app_name">Task Flow</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="loginNow">Already have an account? Login Now.</string>
    <string name="registerNow">Don\'t have an account? Register Now.</string>
    <string name="logout">Signout</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="settings">Settings</string>
    <string name="analytics">Analytics</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="third_fragment">Third_Fragment</string>
    <string name="home2">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="registration_details">Registration Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="date">YYYY/MM/DD</string>
    <string name="welcome">Welcome</string>
    <string name="please_login_with_your_information">Please login with your information</string>
    <string name="forgot_pswd">Forgot Your Password?</string>
    <string name="task_flow">TASK FLOW</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_enter_your_details">Please enter your information</string>
    <string name="next">Next</string>
    <string name="next_step_1">Next (Step 1 of 3)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next_step_2">Next (Step 2 of 3)</string>
    <string name="back_2">Back</string>
    <string name="warning_1">Note: The information entered cannot be changed later.</string>
    <string name="back">Back</string>
    <string name="show_all">Show All</string>
    <string name="dd_mm_yyyy_ant">DD/MM/YYYY</string>
    <string name="hh_mm_ss">HH/MM/SS</string>
    <string name="create_to_do_task">Create To-Do Task</string>
    <string name="give_your_task_a_name">Give Your Task A Name</string>
    <string name="task_name">Task Name</string>
    <string name="due_date_and_time">Due Date And Time:</string>
    <string name="select_due_time">Select Due Time:</string>
    <string name="work_ant">Work:</string>
    <string name="select_your_prefered_work_type">Select Your Prefered Work Type</string>
    <string name="study">Study</string>
    <string name="other">Other</string>
    <string name="assignment">Assignment</string>
    <string name="writing_work">Writing Work</string>
    <string name="current_template">Current Template:</string>
    <string name="description_box">Description Box</string>
    <string name="description">Description</string>
    <string name="save_entry">Save Entry</string>
    <string name="discard_entry">Discard Entry</string>
</resources>