<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_flow"
            android:padding="20dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_details"
                android:alpha="0.7"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Next"
                android:id="@+id/btn_register"
                app:cornerRadius="32dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginNow"
                android:text="@string/loginNow"
                android:layout_gravity="center"
                android:alpha="0.7"/>



        </LinearLayout>


    </androidx.cardview.widget.CardView>
</RelativeLayout>